# alpaca-rs

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
crates/alpaca-cli/: Cargo.toml
crates/alpaca-cli/src/: commands.rs  main.rs
crates/alpaca-mcp/: Cargo.toml
crates/alpaca-mcp/src/: main.rs
crates/alpaca-sdk/: Cargo.toml
crates/alpaca-sdk/src/: client.rs  config.rs  error.rs  lib.rs  stream.rs  types.rs
crates/api-client-core/: Cargo.toml
crates/api-client-core/src/: client.rs  error.rs  lib.rs  pagination.rs  websocket.rs
