[workspace]
resolver = "2"
members = [
    "crates/api-client-core",
    "crates/alpaca-sdk",
    "crates/alpaca-cli",
    "crates/alpaca-mcp",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-with-str"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
url = "2"

api-client-core = { path = "crates/api-client-core" }
alpaca-sdk = { path = "crates/alpaca-sdk" }
alpaca-cli = { path = "crates/alpaca-cli" }
