[package]
name = "alpaca-sdk"
version = "0.2.0"
edition = "2021"
description = "Typed async Rust client for the Alpaca Trading and Market Data APIs"
license = "MIT"
repository = "https://github.com/piekstra/alpaca-rs"

[dependencies]
api-client-core = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }
