[package]
name = "api-client-core"
version = "0.1.0"
edition = "2021"
description = "Generic async REST and WebSocket client abstractions for building API SDKs"
license = "MIT"
repository = "https://github.com/piekstra/alpaca-rs"

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
url = { workspace = true }
